--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nocache": "^3.0.4",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
+    "razorpay": "^2.8.4",
     "slugify": "^1.6.5"
   }
 }
