--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
@@ -24,6 +25,7 @@
     "express-session": "^1.17.3",
     "fileupload": "^0.2.1",
     "mongoose": "^6.6.7",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nocache": "^3.0.4",
