--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "fileupload": "^0.2.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.6.7",
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.10.0",
