--- a/package.json
+++ b/package.json
@@ -26,13 +26,10 @@
     "fileupload": "^0.2.1",
     "moment": "^2.29.4",
     "mongoose": "^6.6.7",
-    "mongoose-paginate": "^5.0.3",
-    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nocache": "^3.0.4",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
-    "razorpay": "^2.8.4",
-    "slugify": "^1.6.5"
+    "razorpay": "^2.8.4"
   }
 }
